--- a/index.html
+++ b/index.html
@@ -649,6 +649,7 @@
         }
 
         function AITab({ selectedChild }) {
+const [aiHistory, setAiHistory] = useState([]);
             const [question, setQuestion] = useState('');
             const [answer, setAnswer] = useState('');
 
@@ -707,7 +708,7 @@
     response += `- στολή απόκριες\n`;
     response += `- ρούχα χειμώνα`;
   }
-
+setAiHistory(prev => [...prev.slice(-5), { role: 'user', content: question }, { role: 'ai', content: response }]);
   setAnswer(response);
   setQuestion('');
 };
@@ -734,6 +735,17 @@
                             {answer}
                         </div>
                     )}
+
+{aiHistory.length > 0 && (
+  <div style={{marginTop: '24px', padding: '12px', background: '#f9f9f9', borderRadius: '8px', maxHeight: '250px', overflowY: 'auto'}}>
+    <div className="section-title" style={{marginBottom: '12px'}}>Ιστορικό συζήτησης</div>
+    {aiHistory.map((msg, i) => (
+      <div key={i} style={{marginBottom: '12px', color: msg.role === 'user' ? '#0066cc' : '#333'}}>
+        <strong>{msg.role === 'user' ? 'Εσύ:' : 'AI:'}</strong> {msg.content}
+      </div>
+    ))}
+  </div>
+)}
                 </div>
             );
         }
