--- a/index.html
+++ b/index.html
@@ -765,7 +765,43 @@ const [aiHistory, setAiHistory] = useState([]);
         dangerouslySetInnerHTML={{ __html: answer }}
     />
 )}
-
+{answer && answer.includes('Δεν κατάλαβα ακριβώς') && (
+  <div style={{marginTop: '24px', padding: '16px', background: '#f0f8ff', borderRadius: '12px', border: '1px solid #d1e7ff'}}>
+    <div style={{fontWeight: 'bold', marginBottom: '12px', fontSize: '16px'}}>Προτεινόμενες ερωτήσεις (πάτα για να ψάξω):</div>
+    <div style={{display: 'flex', flexWrap: 'wrap', gap: '12px'}}>
+      <button 
+        onClick={() => { setQuestion('χειμερινό μπουφάν'); askAI(); }}
+        style={{padding: '10px 18px', background: '#667eea', color: 'white', border: 'none', borderRadius: '8px', cursor: 'pointer', fontSize: '14px'}}
+      >
+        χειμερινό μπουφάν
+      </button>
+      <button 
+        onClick={() => { setQuestion('παπούτσια'); askAI(); }}
+        style={{padding: '10px 18px', background: '#667eea', color: 'white', border: 'none', borderRadius: '8px', cursor: 'pointer', fontSize: '14px'}}
+      >
+        παπούτσια
+      </button>
+      <button 
+        onClick={() => { setQuestion('δώρο γενεθλίων'); askAI(); }}
+        style={{padding: '10px 18px', background: '#667eea', color: 'white', border: 'none', borderRadius: '8px', cursor: 'pointer', fontSize: '14px'}}
+      >
+        δώρο γενεθλίων
+      </button>
+      <button 
+        onClick={() => { setQuestion('στολή απόκριες'); askAI(); }}
+        style={{padding: '10px 18px', background: '#667eea', color: 'white', border: 'none', borderRadius: '8px', cursor: 'pointer', fontSize: '14px'}}
+      >
+        στολή απόκριες
+      </button>
+      <button 
+        onClick={() => { setQuestion('ρούχα χειμώνα'); askAI(); }}
+        style={{padding: '10px 18px', background: '#667eea', color: 'white', border: 'none', borderRadius: '8px', cursor: 'pointer', fontSize: '14px'}}
+      >
+        ρούχα χειμώνα
+      </button>
+    </div>
+  </div>
+)}
 {aiHistory.length > 0 && (
   <div style={{marginTop: '24px', padding: '12px', background: '#f9f9f9', borderRadius: '8px', maxHeight: '250px', overflowY: 'auto'}}>
     <div className="section-title" style={{marginBottom: '12px'}}>Ιστορικό συζήτησης</div>
