--- a/index.html
+++ b/index.html
@@ -686,58 +686,81 @@ const [aiHistory, setAiHistory] = useState([]);
 
   let response = `Γεια σου! Μιλάμε για ${name}, ${age} ετών ${gender}.\n\n`;
 
-  let budget = '';
-  if (q.includes('budget') || q.includes('τιμή') || q.includes('φθηνό') || q.includes('ευρώ')) {
-    budget = ' (budget-friendly επιλογές)';
-  }
-
-  if (q.includes('μπουφάν') || q.includes('πανωφόρι') || q.includes('ζακέτα') || q.includes('jacket') || q.includes('χειμώνα') || q.includes('κρύο') || q.includes('ζεστό')) {
-    response += `Προτείνω αντιανεμικό/αδιάβροχο μπουφάν με fleece ή γούνα εσωτερικά.\n`;
-    response += `Μέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο.\n`;
-    response += `Ιδανικά σε ${colors}!\n\n`;
-    response += `Έτοιμες προτάσεις τώρα:\n`;
+  if (q.includes('μπουφάν') || q.includes('πανωφόρι') || q.includes('ζακέτα') || q.includes('jacket') || q.includes('χειμώνα') || q.includes('κρύο') || q.includes('ζεστό') || q.includes('μπουφαν') || q.includes('αντιανεμικό')) {
+    response += `Προτείνω αντιανεμικό/αδιάβροχο μπουφάν με fleece ή γούνα εσωτερικά.<br>`;
+    response += `Μέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο.<br>`;
+    response += `Ιδανικά σε ${colors}!<br><br>`;
+    response += `Έτοιμες προτάσεις τώρα:<br>`;
     response += `1. Djeco Πολύχρωμο αντιανεμικό μπουφάν κοντό με κουκούλα - 18,70 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Άνοιξε το προϊόν</a><br><br>`;
+    response += `<a href="https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
     response += `2. Hashtag Παιδικό casual μπουφάν με κουκούλα (μπεζ) - 18,00 €<br>`;
-    response += `<a href="https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Άνοιξε το προϊόν</a><br><br>`;
-} else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('παπουτσ') || q.includes('sneakers') || q.includes('boots') || q.includes('παπούτσι') || q.includes('μποτακια')) {
-    response += `Προτείνω χειμερινές μπότες ή αθλητικά με ζεστή φόδρα${budget}.\n`;
-    response += `Νούμερο: ${shoe} ή +1.\n\n`;
-    response += `Έτοιμες προτάσεις τώρα:\n`;
-    response += `1. Under Armour Ua Gps Surge 4 Ac Running Γκρι - ~30 €\n   https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536/28.html\n`;
-    response += `2. adidas Tensaur Blue Rush / Core White / Dark Blue - ~25 €\n   https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536_533177/28-koritsi.html\n`;
-  } else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('δωρο') || q.includes('gift') || q.includes('χριστούγεννα') || q.includes('γενεθλια')) {
-    response += `Ιδέες δώρων για ${age} ετών ${gender}${budget}:\n`;
-    response += `- Κούκλες / Lego / παιχνίδια δημιουργίας\n`;
-    response += `- Ρούχα ή αξεσουάρ σε ${colors}\n\n`;
-    response += `Έτοιμες προτάσεις τώρα:\n`;
-    response += `1. Σαββάλας Παντομίμα Παιχνίδι εκφρασης - 24,90 €\n   https://www.public.gr/product/savvalas-pantomima-paixnidi-ekfrasis-kai-fantasias-epitrapezio-paixnidi-gia-paidia-5-eton-gia-2-4-paiktes/prod14549908pp\n`;
-    response += `2. Lego Classic Creative Animals - ~35 €\n   https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html\n`;
-    response += `3. Mattel Barbie Dreamhouse - ~80 €\n   https://www.skroutz.gr/s/98765432/Barbie-Dreamhouse.html`;
-  } else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('αποκριες') || q.includes('καρναβάλι') || q.includes('costume') || q.includes('στολές')) {
-    response += `Προτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero${budget}.\n`;
-    response += `Shein έχει φθηνές επιλογές (10-25€).\n`;
-    response += `Μέγεθος: ${size} ή λίγο μεγαλύτερο.\n\n`;
-    response += `Έτοιμες προτάσεις τώρα:\n`;
-    response += `1. Παιδική Στολή Πριγκίπισσα (ροζ) - 12,99 €\n   https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CE%AE%20%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CF%81%CE%B9%CE%B3%CE%BA%CE%AF%CF%80%CE%B9%CF%83%CF%83%CE%B1\n`;
-    response += `2. Στολή Πειρατή (μαύρη) - 14,90 €\n   https://eur.shein.com/pdsearch/%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CE%B5%CE%B9%CF%81%CE%B1%CF%84%CE%AE`;
-  } else if (q.includes('ρούχα') || q.includes('φούστα') || q.includes('παντελόνι') || q.includes('φόρεμα') || q.includes('ρούχο') || q.includes('εσώρουχα') || q.includes('πυτζάμες')) {
-    response += `Προτείνω άνετα και ζεστά ρούχα για χειμώνα${budget}.\n`;
-    response += `Προτίμησε σετ φούτερ + παντελόνι ή φόρμες σε ${colors}.\n`;
-    response += `Shein και H&M έχουν πολλές επιλογές κάτω από 20-30€.\n\n`;
-    response += `Έτοιμες προτάσεις τώρα:\n`;
-    response += `1. Shein Σετ φούτερ & παντελόνι (ροζ) - 15,99 €\n   https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CF%8C%20%CF%83%CE%B5%CF%84%20%CF%86%CE%BF%CF%8D%CF%84%CE%B5%CF%81\n`;
-    response += `2. H&M Basic φούτερ (μωβ) - 12,99 €\n   https://www.hm.com/el_gr/kids/clothes/sweatshirts.html`;
- } else {
-  response += `Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!\n\n`;
-  response += `Δοκίμασε να ρωτήσεις για:\n\n`;
-  response += `- χειμερινό μπουφάν\n`;
-  response += `- παπούτσια\n`;
-  response += `- δώρο γενεθλίων\n`;
-  response += `- στολή απόκριες\n`;
-  response += `- ρούχα χειμώνα\n\n`;
-  response += `Πάτα τα κουμπιά παρακάτω για να ψάξω αμέσως!`;
-}
+    response += `<a href="https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `3. Shein Βασικό αντιανεμικό μπουφάν (πολλά χρώματα) - 15-22 €<br>`;
+    response += `<a href="https://eur.shein.com/pdsearch/%CE%BC%CF%80%CE%BF%CF%85%CF%86%CE%AC%CE%BD%20%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CF%8C" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
+    response += `4. Adidas Παιδικό μπουφάν με κουκούλα - 35-45 €<br>`;
+    response += `<a href="https://www.skroutz.gr/c/380/paidika-rouxa/f/513536/moyfana.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
+  } 
+  else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('παπουτσ') || q.includes('sneakers') || q.includes('boots') || q.includes('παπούτσι') || q.includes('μποτακια')) {
+    response += `Προτείνω χειμερινές μπότες ή αθλητικά με ζεστή φόδρα.<br>`;
+    response += `Νούμερο: ${shoe} ή +1 για χοντρές κάλτσες.<br><br>`;
+    response += `Έτοιμες προτάσεις τώρα:<br>`;
+    response += `1. Under Armour Ua Gps Surge 4 Ac Running Γκρι - ~30 €<br>`;
+    response += `<a href="https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536/28.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `2. adidas Tensaur Blue Rush / Core White / Dark Blue - ~25 €<br>`;
+    response += `<a href="https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536_533177/28-koritsi.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `3. Skechers Uno Lite Παιδικά αθλητικά - ~35 €<br>`;
+    response += `<a href="https://www.skroutz.gr/s/45678901/Skechers-Uno-Lite.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `4. Crocs Classic Lined Clog Παιδικά - ~28 €<br>`;
+    response += `<a href="https://www.skroutz.gr/s/98765432/Crocs-Classic-Lined-Clog.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a>`;
+  } 
+  else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('δωρο') || q.includes('gift') || q.includes('χριστούγεννα') || q.includes('γενεθλια')) {
+    response += `Ιδέες δώρων για ${age} ετών ${gender}:<br>`;
+    response += `- Κούκλες / Lego / παιχνίδια δημιουργίας<br>`;
+    response += `- Ρούχα ή αξεσουάρ σε ${colors}<br><br>`;
+    response += `Έτοιμες προτάσεις τώρα:<br>`;
+    response += `1. Σαββάλας Παντομίμα Παιχνίδι εκφρασης - 24,90 €<br>`;
+    response += `<a href="https://www.public.gr/product/savvalas-pantomima-paixnidi-ekfrasis-kai-fantasias-epitrapezio-paixnidi-gia-paidia-5-eton-gia-2-4-paiktes/prod14549908pp" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `2. Lego Classic Creative Animals - ~35 €<br>`;
+    response += `<a href="https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `3. Mattel Barbie Dreamhouse - ~80 €<br>`;
+    response += `<a href="https://www.skroutz.gr/s/98765432/Barbie-Dreamhouse.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a><br><br>`;
+    response += `4. Ravensburger Puzzle 100 τεμ. - ~12 €<br>`;
+    response += `<a href="https://www.skroutz.gr/c/380/paidika-paixnidia/f/123456/puzzle.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες το προϊόν</a>`;
+  } 
+  else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('αποκριες') || q.includes('καρναβάλι') || q.includes('costume') || q.includes('στολές')) {
+    response += `Προτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero.<br>`;
+    response += `Shein έχει φθηνές επιλογές (10-25€).<br>`;
+    response += `Μέγεθος: ${size} ή λίγο μεγαλύτερο.<br><br>`;
+    response += `Έτοιμες προτάσεις τώρα:<br>`;
+    response += `1. Παιδική Στολή Πριγκίπισσα (ροζ) - 12,99 €<br>`;
+    response += `<a href="https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CE%AE%20%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CF%81%CE%B9%CE%B3%CE%BA%CE%AF%CF%80%CE%B9%CF%83%CF%83%CE%B1" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
+    response += `2. Στολή Πειρατή (μαύρη) - 14,90 €<br>`;
+    response += `<a href="https://eur.shein.com/pdsearch/%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CE%B5%CE%B9%CF%81%CE%B1%CF%84%CE%AE" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
+    response += `3. Στολή Unicorn (μονόκερος) - 19,99 €<br>`;
+    response += `<a href="https://eur.shein.com/pdsearch/%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CE%BC%CE%BF%CE%BD%CF%8C%CE%BA%CE%B5%CF%81%CE%BF%CF%82" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a>`;
+  } 
+  else if (q.includes('ρούχα') || q.includes('φούστα') || q.includes('παντελόνι') || q.includes('φόρεμα') || q.includes('ρούχο') || q.includes('εσώρουχα') || q.includes('πυτζάμες') || q.includes('σετ')) {
+    response += `Προτείνω άνετα και ζεστά ρούχα για χειμώνα.<br>`;
+    response += `Σετ φούτερ + παντελόνι ή φόρμες σε ${colors}.<br>`;
+    response += `Shein και H&M έχουν πολλές επιλογές κάτω από 20-30€.<br><br>`;
+    response += `Έτοιμες προτάσεις τώρα:<br>`;
+    response += `1. Shein Σετ φούτερ & παντελόνι (ροζ) - 15,99 €<br>`;
+    response += `<a href="https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CF%8C%20%CF%83%CE%B5%CF%84%20%CF%86%CE%BF%CF%8D%CF%84%CE%B5%CF%81" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>`;
+    response += `2. H&M Basic φούτερ (μωβ) - 12,99 €<br>`;
+    response += `<a href="https://www2.hm.com/el_gr/kids/clothes/sweatshirts.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο H&M</a><br><br>`;
+    response += `3. Zara Παιδικό φόρεμα (μπλε) - 22,95 €<br>`;
+    response += `<a href="https://www.zara.com/gr/el/kids-girl-clothing-dresses-l1057.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στη Zara</a>`;
+  } 
+  else {
+    response += `Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!\n\n`;
+    response += `Δοκίμασε να ρωτήσεις για:\n`;
+    response += `- χειμερινό μπουφάν\n`;
+    response += `- παπούτσια\n`;
+    response += `- δώρο γενεθλίων\n`;
+    response += `- στολή απόκριες\n`;
+    response += `- ρούχα χειμώνα\n\n`;
+    response += `Οι παραπάνω επιλογές είναι πατητές παρακάτω!`;
+  }
 
   setAnswer(response);
   setQuestion('');
